test/frontend/pass/strings.osl
shader foo() {
    string quotes   = "\"";
    string new_line = "\n";
    string tab      = "\t";
}
