test/frontend/fail/missing_return_value.osl
int foo() { return; }
shader bar() {}
